<resources>
    <string name="app_name">Placar da Geral</string>
    <string name="placar_da_geral">Placar da Geral</string>
    <string name="comecar">COMEÇAR</string>
    <string name="desenvolvido_por_alan_silva">Desenvolvido por Alan Silva</string>
    <string name="comecar_a_partida">Começar a partida</string>
    <string name="preencha_os_campos">Preencha os campos</string>
    <string name="gol">GOL</string>
    <string name="terminar_a_partida">TERMINAR A PARTIDA</string>
    <string name="revanche">REVANCHE</string>
    <string name="casa">CASA</string>
    <string name="visitante">VISITANTE</string>
    <string name="compartilhar_no_whatsapp">COMPARTILHAR NO WHATSAPP</string>
    <string name="message_to_share">O jogo entre %1$s e %2$s terminou %3$d a %4$d</string>
</resources>