<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.game.types.BasketScoreActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="32dp"
        tools:context=".MainActivity">

        <Button
            android:id="@+id/btPlayerTwoScore3pt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="3 PONTOS"
            app:layout_constraintBottom_toBottomOf="@+id/btPlayerOneScore3bt"
            app:layout_constraintEnd_toEndOf="@+id/tvPlayerTwoScore"
            app:layout_constraintStart_toStartOf="@+id/tvPlayerTwoScore"
            app:layout_constraintTop_toBottomOf="@+id/btPlayerTwoScore1pt" />

        <Button
            android:id="@+id/btPlayerTwoScore1pt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="48dp"
            android:text="1 PONTO"
            app:layout_constraintBottom_toBottomOf="@+id/btPlayerOneScore3bt"
            app:layout_constraintEnd_toEndOf="@+id/tvPlayerTwoScore"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tvPlayerTwoScore"
            app:layout_constraintTop_toBottomOf="@+id/tvPlayerTwoName"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/btPlayerOneScore3bt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="3 PONTOS"
            app:layout_constraintEnd_toEndOf="@+id/tvPlayerOneScore"
            app:layout_constraintStart_toStartOf="@+id/tvPlayerOneScore"
            app:layout_constraintTop_toBottomOf="@+id/btPlayerOneScore1pt" />

        <Button
            android:id="@+id/btPlayerOneScore1pt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="1 PONTO"
            app:layout_constraintEnd_toEndOf="@+id/tvPlayerOneScore"
            app:layout_constraintHorizontal_bias="0.285"
            app:layout_constraintStart_toStartOf="@+id/tvPlayerOneScore"
            app:layout_constraintTop_toBottomOf="@+id/tvPlayerOneName" />

        <Button
            android:id="@+id/btFinishMatch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/terminar_a_partida"
            app:layout_constraintEnd_toEndOf="@+id/btPlayerTwoScore3pt"
            app:layout_constraintStart_toStartOf="@+id/btPlayerOneScore3bt"
            app:layout_constraintTop_toBottomOf="@+id/btPlayerOneScore3bt" />

        <Button
            android:id="@+id/btRevenge"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/revanche"
            app:layout_constraintEnd_toEndOf="@+id/btFinishMatch"
            app:layout_constraintStart_toStartOf="@+id/btFinishMatch"
            app:layout_constraintTop_toBottomOf="@+id/btFinishMatch" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/placar_da_geral"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.056" />

        <TextView
            android:id="@+id/tvPlayerOneName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/casa"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="@+id/tvPlayerOneScore"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tvPlayerOneScore"
            app:layout_constraintTop_toBottomOf="@+id/tvPlayerOneScore" />

        <TextView
            android:id="@+id/tvPlayerTwoName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/visitante"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="@+id/tvPlayerTwoScore"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tvPlayerTwoScore"
            app:layout_constraintTop_toBottomOf="@+id/tvPlayerTwoScore" />

        <TextView
            android:id="@+id/tvPlayerOneScore"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="0"
            android:textAlignment="center"
            android:textSize="72sp"
            app:layout_constraintEnd_toStartOf="@+id/textView7"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView7" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:text="X"
            android:textAlignment="center"
            android:textSize="72sp"
            app:layout_constraintEnd_toStartOf="@+id/tvPlayerTwoScore"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tvPlayerOneScore"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <TextView
            android:id="@+id/tvPlayerTwoScore"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="0"
            android:textAlignment="center"
            android:textSize="72sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView7"
            app:layout_constraintTop_toTopOf="@+id/textView7" />

        <Button
            android:id="@+id/btShareWhatsApp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:backgroundTint="#FFF00000"
            android:text="@string/compartilhar_no_whatsapp"
            app:layout_constraintEnd_toEndOf="@+id/btRevenge"
            app:layout_constraintStart_toStartOf="@+id/btRevenge"
            app:layout_constraintTop_toBottomOf="@+id/btRevenge" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>