<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.game.types.TrucoScoreActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="32dp"
        tools:context=".MainActivity">

        <Button
            android:id="@+id/button5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#8BC34A"
            android:text="+ 12"
            app:layout_constraintEnd_toEndOf="@+id/button4"
            app:layout_constraintStart_toStartOf="@+id/button4"
            app:layout_constraintTop_toBottomOf="@+id/button4" />

        <Button
            android:id="@+id/button4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#8BC34A"
            android:text="+ 9"
            app:layout_constraintBottom_toTopOf="@+id/button5"
            app:layout_constraintEnd_toEndOf="@+id/button3"
            app:layout_constraintStart_toStartOf="@+id/button3"
            app:layout_constraintTop_toBottomOf="@+id/button3" />

        <Button
            android:id="@+id/button3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#8BC34A"
            android:text="+ 6"
            app:layout_constraintBottom_toTopOf="@+id/button4"
            app:layout_constraintEnd_toEndOf="@+id/button2"
            app:layout_constraintStart_toStartOf="@+id/button2"
            app:layout_constraintTop_toBottomOf="@+id/button2" />

        <Button
            android:id="@+id/btPlayerOneScore3bt7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#8BC34A"
            android:text="+ 9"
            app:layout_constraintBottom_toTopOf="@+id/btPlayerOneScore3bt8"
            app:layout_constraintEnd_toEndOf="@+id/btPlayerOneScore3bt6"
            app:layout_constraintStart_toStartOf="@+id/btPlayerOneScore3bt6"
            app:layout_constraintTop_toBottomOf="@+id/btPlayerOneScore3bt6" />

        <Button
            android:id="@+id/btPlayerOneScore3bt8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#8BC34A"
            android:text="+ 12"
            app:layout_constraintEnd_toEndOf="@+id/btPlayerOneScore3bt7"
            app:layout_constraintStart_toStartOf="@+id/btPlayerOneScore3bt7"
            app:layout_constraintTop_toBottomOf="@+id/btPlayerOneScore3bt7" />

        <Button
            android:id="@+id/btPlayerOneScore3bt5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#8BC34A"
            android:text="+ 3"
            app:layout_constraintBottom_toTopOf="@+id/btPlayerOneScore3bt6"
            app:layout_constraintEnd_toEndOf="@+id/btPlayerOneScore3bt4"
            app:layout_constraintStart_toStartOf="@+id/btPlayerOneScore3bt4"
            app:layout_constraintTop_toBottomOf="@+id/btPlayerOneScore3bt4" />

        <Button
            android:id="@+id/btPlayerOneScore3bt6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#8BC34A"
            android:text="+ 6"
            app:layout_constraintBottom_toTopOf="@+id/btPlayerOneScore3bt7"
            app:layout_constraintEnd_toEndOf="@+id/btPlayerOneScore3bt5"
            app:layout_constraintStart_toStartOf="@+id/btPlayerOneScore3bt5"
            app:layout_constraintTop_toBottomOf="@+id/btPlayerOneScore3bt5" />

        <Button
            android:id="@+id/btPlayerTwoScore3pt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#E40808"
            android:text="- 1"
            app:layout_constraintBottom_toTopOf="@+id/button"
            app:layout_constraintEnd_toEndOf="@+id/tvPlayerTwoScore"
            app:layout_constraintStart_toStartOf="@+id/tvPlayerTwoScore"
            app:layout_constraintTop_toBottomOf="@+id/tvPlayerTwoName"
            app:layout_constraintVertical_chainStyle="spread" />

        <Button
            android:id="@+id/btPlayerOneScore3bt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#E40808"
            android:text="-1"
            app:layout_constraintBottom_toTopOf="@+id/btPlayerOneScore3bt4"
            app:layout_constraintEnd_toEndOf="@+id/tvPlayerOneScore"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tvPlayerOneScore"
            app:layout_constraintTop_toBottomOf="@+id/tvPlayerOneName"
            app:layout_constraintVertical_chainStyle="spread" />

        <Button
            android:id="@+id/btPlayerOneScore3bt4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#8BC34A"
            android:text="+ 1"
            app:layout_constraintBottom_toTopOf="@+id/btPlayerOneScore3bt5"
            app:layout_constraintEnd_toEndOf="@+id/btPlayerOneScore3bt"
            app:layout_constraintStart_toStartOf="@+id/btPlayerOneScore3bt"
            app:layout_constraintTop_toBottomOf="@+id/btPlayerOneScore3bt" />

        <Button
            android:id="@+id/btFinishMatch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/terminar_a_partida"
            app:layout_constraintEnd_toEndOf="@+id/tvPlayerTwoScore"
            app:layout_constraintStart_toStartOf="@+id/tvPlayerOneScore"
            app:layout_constraintTop_toBottomOf="@+id/btPlayerOneScore3bt8" />

        <Button
            android:id="@+id/btRevenge"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/revanche"
            app:layout_constraintEnd_toEndOf="@+id/btFinishMatch"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/btFinishMatch"
            app:layout_constraintTop_toBottomOf="@+id/btFinishMatch" />

        <Button
            android:id="@+id/btShareWhatsApp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/compartilhar_no_whatsapp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/btRevenge"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/btRevenge"
            app:layout_constraintTop_toBottomOf="@+id/btRevenge" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/placar_da_geral"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.056" />

        <TextView
            android:id="@+id/tvPlayerOneName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/casa"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="@+id/tvPlayerOneScore"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tvPlayerOneScore"
            app:layout_constraintTop_toBottomOf="@+id/tvPlayerOneScore" />

        <TextView
            android:id="@+id/tvPlayerTwoName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/visitante"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="@+id/tvPlayerTwoScore"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tvPlayerTwoScore"
            app:layout_constraintTop_toBottomOf="@+id/tvPlayerTwoScore" />

        <TextView
            android:id="@+id/tvPlayerOneScore"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="0"
            android:textAlignment="center"
            android:textSize="72sp"
            app:layout_constraintEnd_toStartOf="@+id/textView7"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView7" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="X"
            android:textAlignment="center"
            android:textSize="72sp"
            app:layout_constraintEnd_toStartOf="@+id/tvPlayerTwoScore"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tvPlayerOneScore"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <TextView
            android:id="@+id/tvPlayerTwoScore"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="0"
            android:textAlignment="center"
            android:textSize="72sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView7"
            app:layout_constraintTop_toTopOf="@+id/textView7" />

        <Button
            android:id="@+id/button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#8BC34A"
            android:text="+ 1"
            app:layout_constraintBottom_toTopOf="@+id/button2"
            app:layout_constraintEnd_toEndOf="@+id/btPlayerTwoScore3pt"
            app:layout_constraintStart_toStartOf="@+id/btPlayerTwoScore3pt"
            app:layout_constraintTop_toBottomOf="@+id/btPlayerTwoScore3pt" />

        <Button
            android:id="@+id/button2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#8BC34A"
            android:text="+ 3"
            app:layout_constraintBottom_toTopOf="@+id/button3"
            app:layout_constraintEnd_toEndOf="@+id/button"
            app:layout_constraintStart_toStartOf="@+id/button"
            app:layout_constraintTop_toBottomOf="@+id/button" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>